# Backend/Products/src/swagger.yaml
@@ -16,7 +16,7 @@ tags:
   - name: products
     description: Es modelo contiene diferentes rutas la cual es entregada en formato JS.
 paths:
-  /products:
+  /create:
     post:
       tags:
         - products
@@ -30,7 +30,7 @@ paths:
               $ref: '#/components/schemas/CreateProduct'
         required: true
       responses:
-        '200':
+        '201':
           description: (OK) Imagen creada con exito
           content:
             application/json:
@@ -61,12 +61,140 @@ paths:
           $ref: '#/components/responses/NotFound'
         '500':
           $ref: '#/components/responses/ServerError'
-
+  /{id}/like:
+    post:
+      tags:
+        - products
+      summary: Dar like a un producto
+      description: Se envia el id del producto para sumar un like a ese producto
+      parameters:
+        - name: id
+          in: path
+          description: Id del producto
+          required: true
+          schema: 
+            type: string
+      responses:
+        200:
+          description: (OK) rating del producto
+          content:
+            aplication/json:
+              schema:
+                properties:
+                  rating:
+                    type: number
+                    description: Los likes que haya sumado el producto hasta el momento
+        204:
+          $ref: '#/components/responses/NoContent'
+        400:
+          $ref: '#/components/responses/BadRequest'
+        404:
+          $ref: '#/components/responses/NotFound'
+        500:
+          $ref: '#/components/responses/ServerError'
+  /{id}/comment:
+    post:
+      tags:
+        - products
+      summary: Crear un comentario a un producto
+      description: Se envia el id del producto y el nuevo comentario a ese producto
+      parameters:
+        - name: id
+          in: path
+          description: Id del producto
+          required: true
+          schema:
+            type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/newComment'
+      responses:
+        201:
+          description: (OK) Mensaje 
+          content:
+            application/json:
+              schema:
+                properties:
+                  message:
+                    type: string
+                    description: Mensaje de agradecimiento por el comentario
+        204:
+          $ref: '#/components/responses/NoContent'
+        400:
+          $ref: '#/components/responses/BadRequest'
+        404:
+          $ref: '#/components/responses/NotFound'
+        500:
+          $ref: '#/components/responses/ServerError'
+  /{id}:
+    get:
+      tags:
+        - products
+      summary: Ver informacion  completa de un solo producto
+      description: Se envia el id del producto a buscar
+      parameters:
+        - name: id
+          in: path
+          description:  Id del producto
+          required: true
+          schema:
+            type: string
+      responses:
+        200:
+          description: (OK) Detalle del producto
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PoductById'
+        204:
+          $ref: '#/components/responses/NoContent'
+        400:
+          $ref: '#/components/responses/BadRequest'
+        404:
+          $ref: '#/components/responses/NotFound'
+        500:
+          $ref: '#/components/responses/ServerError'
+  /bycomment/{id}:
+    get:
+      tags:
+        - products
+      summary: Ver los comentarios de un prducto especifico
+      description: Se envia el id del producto que se quiere ver los comentarios
+      parameters:
+        - name: id
+          in: path
+          description: Id del producto a ver los comentarios
+          required: true
+          schema:
+            type: string
+      responses:
+        200:
+          description: (OK) Todos los comentarios que tenga ese producto
+          content:
+            application/json:
+              schema:
+                properties:
+                  comments:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/Comments'
+        204:
+          $ref: '#/components/responses/NoContent'
+        400:
+          $ref: '#/components/responses/BadRequest'
+        404:
+          $ref: '#/components/responses/NotFound'
+        500:
+          $ref: '#/components/responses/ServerError'
 
 components:
   responses:
     Unauthorized:
       description: (Unauthorized) no hay autorizacion para llamar al servicio
+    NoContent:
+      description: (No Content) no se encontro registro en la DB
     NotFound:
       description: (NotFound) no se encontro la informacion
     BadRequest:
@@ -100,15 +228,12 @@ components:
           type: string
           format: binary
           description: Una imagen del producto a crear. con execelente definicion
-
-          
     CreateProductOK:
       type: object
       properties:
         message:
           type: string
           description: Un mensaje que indica que el registro del producto fue exitoso
-    
     AllProductsOK:
       type: object
       properties:
@@ -130,8 +255,6 @@ components:
               type: array
               items:
                 $ref: '#/components/schemas/PoductsDetail'
-        
-        
     PoductsDetail:
       type: object
       properties:
@@ -157,7 +280,35 @@ components:
           type: string
         timestamps:
           type: string
-          
+    PoductById:
+      type: object
+      properties:
+        _id:
+          type: string
+        name:
+          type: string
+        description:
+          type: string
+        category:
+          type: string
+        price:
+          type: integer
+        rating:
+          type: integer
+        views:
+          type: integer
+        comments:
+          type: integer
+        image:
+          format: hostname
+        public_id:
+          type: string
+        timestamps:
+          type: string
+        listComments:
+          type: array
+          items:
+            $ref: '#/components/schemas/Comments'
     Stats:
       type: object
       properties:
@@ -169,13 +320,10 @@ components:
           type: integer
         rating:
           type: integer
-    
-        
     newComments:
       type: array
       items:
         $ref: '#/components/schemas/Comments'
-        
     Comments:
       type: object
       properties:
@@ -189,7 +337,23 @@ components:
           type: string
         email:
           type: string
+          description: El email de la persona que hizo el comentario
         timestamps:
           format: date-time
         avatar:
           format: uuid
+          description: Avatar de la persona que hizo el comentario
+    newComment:
+      type: object
+      properties:
+        title:
+          type: string
+          description: el nombre que se dara al comentario 
+        comment:
+          type: string
+          description: El comentario que se le hara al producto
+        email:
+          type: string
+          description: El correo electronico de la persona que hace el comentario
+        
+    
